--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -717,9 +717,24 @@ For transactions that are HTTP requests, the agent can optionally capture the re
 If the request has a body and this setting is disabled, the body will be shown as [REDACTED].
 This option is case-insensitive.
 
-WARNING: Request bodies often contain sensitive values like passwords, credit card numbers, etc.
+[IMPORTANT]
+====
+To allow capturing request bodies, the agent sets `AllowSynchronousIO` to `true` on a per
+request basis in ASP.NET Core, since capturing can occur in synchronous code paths. 
+
+https://docs.microsoft.com/en-us/aspnet/core/migration/22-to-30?#allowsynchronousio-disabled[With ASP.NET Core 3.0 onwards, `AllowSynchronousIO` is `false` by default] 
+because a large number of blocking synchronous I/O operations can lead to thread pool starvation, 
+which makes the application unresponsive. If your application becomes unresponsive with this 
+feature enabled, consider disabling capturing.
+====
+
+[WARNING]
+====
+Request bodies often contain sensitive values like passwords, credit card numbers, etc.
 If your service handles data like this, we advise to only enable this feature with care.
-Turning on body capturing can also significantly increase the overhead in terms of heap usage, network utilization, and Elasticsearch index size.
+Turning on body capturing can also significantly increase the overhead in terms of heap usage, 
+network utilization, and Elasticsearch index size.
+====
 
 Possible options are `off`, `errors`, `transactions` and `all`:
 
