--- a/docs/public-api.asciidoc
+++ b/docs/public-api.asciidoc
@@ -282,6 +282,20 @@ transaction.SetLabel("intSample", 42);
 * `String|Number|bool value`: The tag value
 
 [float]
+[[api-transaction-try-get-label]]
+==== `T GetLabel<T>(string key, out T value)` added[1.7.1,Number and boolean labels require APM Server 6.7+]
+
+Returns the transaction's label in the `value` out parameter. If the `key` does not exist, this method returns false.
+Labels can be added with the <<api-transaction-set-label, SetLabel>> method.
+
+
+[source,csharp]
+----
+if(transaction.TryGetLabel<int>("foo", our var myLabel))
+    Console.WriteLine(myLabel);
+----
+
+[float]
 [[api-transaction-tags]]
 ==== `Dictionary<string,string> Labels`
 
@@ -566,6 +580,21 @@ span.SetLabel("intSample", 42);
 
 * `String key`:   The tag key
 * `String|Number|bool value`: The tag value
+
+
+[float]
+[[api-span-try-get-label]]
+==== `T GetLabel<T>(string key, out T value)` added[1.7.1,Number and boolean labels require APM Server 6.7+]
+
+Returns the span's label in the `value` out parameter. If the `key` does not exist, this method returns false.
+Labels can be added with the <<api-span-set-label, SetLabel>> method.
+
+
+[source,csharp]
+----
+if(span.TryGetLabel<bool>("foo", out var myLabel))
+    Console.WriteLine(myLabel);
+----
 
 [float]
 [[api-span-tags]]
