Add private readonly IConfiguration variable
Add below private variable definition line in Startup.cs source snippet.

> private readonly IConfiguration Configuration;

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -33,7 +33,10 @@ using Elastic.Apm.AspNetCore;
 
 public class Startup
 {
-    public Startup(IConfiguration configuration)
+
+    private readonly IConfiguration Configuration;
+    
+	public Startup(IConfiguration configuration)
     {
         Configuration = configuration;
     }
