change private variable name

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -34,11 +34,11 @@ using Elastic.Apm.AspNetCore;
 public class Startup
 {
 
-    private readonly IConfiguration Configuration;
+    private readonly IConfiguration _configuration;
     
 	public Startup(IConfiguration configuration)
     {
-        Configuration = configuration;
+        _configuration = configuration;
     }
 
     public void Configure(IApplicationBuilder app, IHostingEnvironment env)
