--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -33,9 +33,12 @@ using Elastic.Apm.AspNetCore;
 
 public class Startup
 {
+
+    private readonly IConfiguration _configuration;
+    
     public Startup(IConfiguration configuration)
     {
-        Configuration = configuration;
+        _configuration = configuration;
     }
 
     public void Configure(IApplicationBuilder app, IHostingEnvironment env)
