--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -13,6 +13,7 @@ On .NET Core the agent also supports auto instrumentation without any code chang
 * <<setup-asp-dot-net>>
 * <<setup-ef6>>
 * <<setup-sqlclient>>
+* <<setup-stackexhange-redis>>
 * <<setup-general>>
 
 [float]
