Expose creating agent components for ASP.NET Full Framework (#1122)
* Expose creating agent components for ASP.NET Full Framework

This commit exposes a CreateAgentComponents method on
ElasticApmModule that allows a user to create agent components
for ASP.NET Full Framework and set up the APM agent, before
the ElasticApmModule Init() runs. This is useful in scenarios
where a user wishes to capture transactions/spans or setup filters at application
start.

The CreateAgentComponents returns a derived FullFrameworkAgentComponents
type that SafeAgentSetup method uses to determine whether an already initialized
agent is likely to lead to unexpected behaviour e.g. agent component implementations
not designed to work with ASP.NET Full Framework.

An example usage of CreateAgentComponents is

    public class MvcApplication : HttpApplication
    {
        protected void Application_Start()
        {
            // other application startup e.g. RouteConfig, etc.

            // configure agent filter on startup
            var agentComponents = ElasticApmModule.CreateAgentComponents();
            Agent.Setup(agentComponents);
            Agent.AddFilter((ITransaction t) =>
            {
                t.SetLabel("foo", "bar");
                return t;
            });
        }
    }

Fixes #1098
Fixes #1045

* address PR feedback

--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -252,6 +252,36 @@ as shown in the following example:
 
 You can also configure the agent using `web.config` as described at <<configuration-on-asp-net>>.
 
+The `ElasticApmModule` instantiates the APM agent on first initialization. There are some scenarios however where
+you might want to control agent instantiatiation, such as configuring filters in application start. The
+`ElasticApmModule` exposes a `CreateAgentComponents()` method that returns agent components configured to work with
+ASP.NET Full Framework, that can then be used to instantiate the agent.
+
+For example, one might wish to add transaction filters to the agent in application start
+
+[source, c#]
+----
+public class MvcApplication : HttpApplication
+{
+    protected void Application_Start()
+    {
+        // other application startup e.g. RouteConfig, etc.
+
+        // set up agent with components
+        var agentComponents = ElasticApmModule.CreateAgentComponents();
+        Agent.Setup(agentComponents);
+
+        // add transaction filter
+        Agent.AddFilter((ITransaction t) =>
+        {
+            t.SetLabel("foo", "bar");
+            return t;
+        });
+    }
+}
+----
+
+Now, the `ElasticApmModule` will use the already instantiated APM agent instance upon initialization.
 
 [[setup-ef6]]
 === Entity Framework 6
