[Doc] Adding some notes about disabled agent (#1179)
* Add notes about disabled agent + public API

* Update configuration.asciidoc

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -191,6 +191,8 @@ mostly idle in this state, so the overhead should be negligible.
 
 You can use this setting to dynamically disable Elastic APM at runtime.
 
+WARNING: Setting `Recording` to `false` influences the behavior of the <<public-api>>. When the agent is not active it won't keep track of transactions, spans and any related properties on those.
+
 [options="header"]
 |============
 | Environment variable name       | IConfiguration or Web.config key
@@ -211,6 +213,8 @@ You can use this setting to dynamically disable Elastic APM at runtime.
 
 Setting to false will completely disable the agent, including instrumentation and remote config polling.
 If you want to dynamically change the status of the agent, use <<config-recording,`recording`>> instead.
+
+WARNING: Setting `Enabled` to `false` influences the behavior of the <<public-api>>. When the agent is not active it won't keep track of transactions, spans and any related properties on those.
 
 [options="header"]
 |============
